[package]
name = "concurrencykit"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "http://concurrencykit.org/"
description = "Modern concurrency primitives and building blocks for high performance applications"
repository = "https://github.com/concurrencykit/ck-rust"

keywords = ["atomic", "garbage", "non-blocking", "lock-free", "rcu"]
categories = ["concurrency", "memory-management", "data-structures", "no-std"]

[dependencies]
